BUNDOX-26: CSS styling mostly complete. Broker ellipsis on overflow. Will fix later

--- a/bundox-client/styles/styles.css
+++ b/bundox-client/styles/styles.css
@@ -309,11 +309,14 @@ img.family {
 
 .document-subject {
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
-  display: inline;
   margin-bottom: 5px;
+  margin-right: 20px;
   width: 100%;
+}
+
+.document-subject:hover {
+  background: #7698D6;
 }
 
 /* Split-Pane Styles */
@@ -407,6 +410,7 @@ mark {
   text-decoration: underline;
 }
 
+
 div.namespace-dropdown {
   display: inline-block;
 }
@@ -425,8 +429,9 @@ div.namespace-dropdown {
   border-style: solid;
   border-color: #aaa;
   border-width: 1px;
-  background: grey;
+  background: #e2e2e2;
   width: 25px;
   float:right;
   text-align: center;
+  margin-right: 10px;
 }
